--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "figmaemail",
+  "name": "figmaemaily",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@vitejs/plugin-react": "^1.0.7",
     "sass": "^1.49.0",
     "vite": "^2.7.2"
